# dig-doc

./: .env_example  .gitignore  README.md  Taskfile.yaml  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/dev/: Dockerfile
docs/: taskfile.md  開発環境構築.md
docs/scripts/: index.md  qa.md  recreate-vectorstore.md  sample.md
scripts/: qa.py  recreate_vectorstore.py  sample.py
src/: config.py  vectorstore.py
src/api/: main.py
tests/unit_tests/: test_config.py  test_vectorstore.py
